Complete Main component

--- a/public/index.html
+++ b/public/index.html
@@ -11,11 +11,10 @@
     />
 
     <!-- Fonts -->
-
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Pacifico&family=Permanent+Marker&family=Raleway&display=swap"
       rel="stylesheet"
     />
 
